--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -15,6 +16,12 @@
 </head>
 <body>
 
+    <div id="loader" class=" min-vh-100 loader">
+        <div class="spinner-grow " role="status">
+            <span class="visually-hidden ">Loading...</span>
+          </div>
+    </div>
+   
     
         <div id="barnav" class="d-md-flex text-center barnav pt-3 bg-white  align-items-center justify-content-between">
             <h4 id="header" class="mb-3 ps-3">The Traveller</h4>
